<?xml version="1.0"?>
<package format="2">
  <name>manta_positioning</name>
  <version>0.0.0</version>
  <description>The manta_positioning package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="junyoung@todo.todo">junyoung</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>mqtt2ros</build_depend>

  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>yaml-cpp</build_export_depend>
  <build_export_depend>mqtt2ros</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>mqtt2ros</exec_depend>
  

</package>
